--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
     "bcrypt": "^5.0.1",
-    "express": "^4.17.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
@@ -21,6 +22,6 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   }
 }
