--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@sendgrid/mail": "^7.6.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.7",
+    "exceljs": "^4.3.0",
     "express": "^4.18.1",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
-    "validator": "^13.7.0"
+    "path": "^0.12.7",
+    "validator": "^13.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
