--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
-    "validator": "^13.7.0"
+    "path": "^0.12.7",
+    "validator": "^13.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
